trying to fix popup on ios

--- a/src/scss/_layout.scss
+++ b/src/scss/_layout.scss
@@ -36,7 +36,7 @@ body {
     align-items: flex-start;
     justify-content: space-between;
 
-    height: 100vh;
+    height: 200vh;
     width: 100vw;
     padding-top: 70px;
     padding-bottom: 70px;
